--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --gulf-blue-950: #151b56;
+  --gulf-blue-700: #1f43f1;
+  --white-50: #ffffff;
+  --gray-200: #d9d9d9;
 }
