--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
 :root {
   --gulf-blue-950: #151b56;
   --gulf-blue-700: #1f43f1;
+  --gulf-blue-800: #1232c1;
   --white-50: #ffffff;
   --gray-200: #d9d9d9;
   --hawkes-blue-200: #dae5ff;
   --azure-radiance-400: #4880ff;
-  --gulf-blue-800: #1232c1
 }
