--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
   --gulf-blue-700: #1f43f1;
   --gulf-blue-800: #1232c1;
   --white-50: #ffffff;
+  --white-100: #efefef;
+  --white-200: #dcdcdc;
   --gray-200: #d9d9d9;
   --hawkes-blue-200: #dae5ff;
   --azure-radiance-400: #4880ff;
