critical-path: task view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,14 @@
   --gulf-blue-950: #151b56;
   --gulf-blue-700: #1f43f1;
   --gulf-blue-800: #1232c1;
+  --jordy-blue-400: #90b5ff;
   --white-50: #ffffff;
   --white-100: #efefef;
   --white-200: #dcdcdc;
   --gray-200: #d9d9d9;
   --hawkes-blue-200: #dae5ff;
   --azure-radiance-400: #4880ff;
+  --moss-green-300: #9dd89f;
+  --lemon-300: #ffeb3b;
+  --sweet-pink-300: #fca5a5;
 }
