statistic: calendar (incomplete)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --gulf-blue-700: #1f43f1;
   --gulf-blue-800: #1232c1;
   --jordy-blue-400: #90b5ff;
+  --jordy-blue-200: #bdd2ff;
   --white-50: #ffffff;
   --white-100: #efefef;
   --white-200: #dcdcdc;
