--- a/src/app/application/statistic/components/calendar/styles.module.css
+++ b/src/app/application/statistic/components/calendar/styles.module.css
@@ -1,5 +1,5 @@
 .cell {
-  padding: 12px;
+  padding: 8px;
   aspect-ratio: 1;
   flex: 1 1 0;
   background-color: var(--white-200);
@@ -8,6 +8,7 @@
   align-items: center;
   border-radius: 5px;
   font-weight: 600;
+  font-size: 0.75rem;
 }
 
 .headerCell {
@@ -15,5 +16,5 @@
 }
 
 .notCurrentMonth {
-  opacity: 0.75;
+  opacity: 0.65;
 }
