--- a/src/app/application/components/task/styles.module.css
+++ b/src/app/application/components/task/styles.module.css
@@ -10,19 +10,19 @@
   transform: translateY(-5px);
 }
 
-.taskView .container {
+.container {
   padding: 12px;
   flex: 1 1 0;
   z-index: 10;
 }
 
-.taskView .time {
+.time {
   max-width: 300px;
   text-align: right;
   position: relative;
 }
 
-.taskView .triangle {
+.triangle {
   content: '';
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   position: absolute;
