application: add hover effects and svg

--- a/src/app/application/statistic/components/app-graphic/styles.module.css
+++ b/src/app/application/statistic/components/app-graphic/styles.module.css
@@ -4,8 +4,13 @@
   display: flex;
   justify-content: space-between;
   background-color: var(--hawkes-blue-200);
+  transition: transform 0.3s;
 }
 
 .restricted {
   background-color: var(--sweet-pink-300);
+}
+
+.appGraphic:hover {
+  transform: translateY(-5px);
 }
