--- a/src/app/application/critical-path/components/critical-path-node/styles.module.css
+++ b/src/app/application/critical-path/components/critical-path-node/styles.module.css
@@ -8,10 +8,13 @@
 .node > span {
   grid-row: 1;
   grid-column: 1;
-  width: 300px;
+  width: calc(200px + var(--extra-width, 0px));
 }
 
 .node > div {
   grid-row: 2;
   grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
